# qk1

./: .gitignore  .hgignore  Makefile  README  asm_i386.h  bspfile.h  cd.c  cd_9.c  cd_linux.c  cd_null.c  cd_plan9.c  cdaudio.h  chase.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  cmprocess.c  cmprocess_arm64.s  colormatrix.c  colormatrix.h  common.c  common.h  console.c  console.h  crc.c  crc.h  cvar.c  cvar.h  d_alpha.c  d_draw.s  d_draw16.s  d_edge.c  d_fill.c  d_iface.h  d_init.c  (+180 more)
cross/: i686-w64-mingw32.static.txt  x86_64-w64-mingw32.static.txt
plan9/: d_scan.h  inline  platform.h
posix/: platform.h
qw/: bspfile.h  cd.c  cdaudio.h  cl_cam.c  cl_demo.c  cl_ents.c  cl_input.c  cl_main.c  cl_parse.c  cl_pred.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  console.c  console.h  crc.c  crc.h  cvar.c  cvar.h  d_edge.c  d_fill.c  d_iface.h  d_init.c  d_local.h  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  d_zpoint.c  draw.c  draw.h  in.c  input.h  (+79 more)
u/: d_ifacea.h  d_polysa.s  d_scana.s  d_spr8.s  math.s  quakeasm.h  r_aclipa.s  r_aliasa.s  r_drawa.s  sys_dosa.s
unix/: cd.c  d_scan.h  fs.c  in.c  net_udp.c  platform.h  qk1.c  snd.c  snd_openal.c  snd_sdl.c  u.h  vid.c
